<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.andrios.rulesoftheroad.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/QuetionLinearLayout">
                    <TextView
                        android:id="@+id/questionText1"
                        style="@style/QuestionTextStyle"
                        android:text="@string/question_1"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/QuetionLinearLayout"
                    android:orientation="horizontal">


                    <CheckBox
                        style="@style/CheckStyle"
                        android:text="@string/answer_1_1"
                        android:id="@+id/checkBox1"/>

                    <CheckBox
                        style="@style/CheckStyle"
                        android:text="@string/chaff_1_1"
                        android:id="@+id/checkBox2" />
                </LinearLayout>
                <LinearLayout
                    style="@style/QuetionLinearLayout"
                    android:orientation="horizontal">
                    <CheckBox
                        style="@style/CheckStyle"
                        android:text="@string/answer_1_2"
                        android:id="@+id/checkBox3"/>
                    <CheckBox
                        style="@style/CheckStyle"
                        android:text="@string/chaff_1_2"
                        android:id="@+id/checkBox4"/>
                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/QuetionLinearLayout"
                    android:layout_weight="2">
                    <TextView
                        android:id="@+id/questionText2"
                        style="@style/QuestionTextStyle"
                        android:text="@string/question_2"/>
                </LinearLayout>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        style="@style/RadioStyle"
                        android:text="@string/answer_2"
                        android:id="@+id/radioButton1"/>
                    <RadioButton
                        style="@style/RadioStyle"
                        android:text="@string/chaff_2_1"
                        android:id="@+id/checkBox6" />
                    <RadioButton
                        style="@style/RadioStyle"
                        android:text="@string/chaff_2_2"
                        android:id="@+id/checkBox7"/>
                    <RadioButton
                        style="@style/RadioStyle"
                        android:text="@string/chaff_2_3"
                        android:id="@+id/checkBox8"/>

                </RadioGroup>


            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_height="wrap_content"
                    style="@style/QuestionTextStyle"
                    android:text="@string/question_3"
                    android:layout_weight="0"/>
                <EditText
                    android:id="@+id/questionEditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter: 1, 2, 3, 4..."/>
            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/QuetionLinearLayout">
                    <TextView
                        style="@style/QuestionTextStyle"
                        android:text="@string/question_4"/>
                </LinearLayout>
                <LinearLayout
                    style="@style/QuetionLinearLayout"
                    android:orientation="horizontal">


                    <CheckBox
                        style="@style/CheckStyle"
                        android:text="@string/answer_4_1"
                        android:id="@+id/checkBox13"/>

                    <CheckBox
                        style="@style/CheckStyle"
                        android:text="@string/chaff_4"
                        android:id="@+id/checkBox14" />
                </LinearLayout>
                <LinearLayout
                    style="@style/QuetionLinearLayout"
                    android:orientation="horizontal">
                    <CheckBox
                        style="@style/CheckStyle"
                        android:text="@string/answer_4_2"
                        android:id="@+id/checkBox15" />
                    <CheckBox
                        style="@style/CheckStyle"
                        android:text="@string/answer_4_3"
                        android:id="@+id/checkBox16" />
                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            android:layout_marginBottom="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/QuetionLinearLayout"
                    android:layout_weight="2"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            style="@style/QuestionTextStyle"
                            android:layout_weight="1"
                            android:text="@string/question_5"/>
                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <RadioButton
                                style="@style/RadioStyle"
                                android:text="@string/answer_5"
                                android:id="@+id/radioButton2"/>
                            <RadioButton
                                style="@style/RadioStyle"
                                android:text="@string/chaff_5"
                                android:id="@+id/radioButton3" />


                        </RadioGroup>
                    </LinearLayout>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/standon"
                        android:layout_weight="1"
                        />
                </LinearLayout>



            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="6dp"
            android:layout_marginBottom="4dp">


            <LinearLayout
                style="@style/QuetionLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/QuestionTextStyle"
                    android:id="@+id/answerText"
                    android:text="@string/submit_text"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Check Answers"
                    android:id="@+id/button"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="48dp"
                    android:onClick="scoreQuiz"/>
            </LinearLayout>


        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>
